--- a/src/public/scss/partials/_navs.scss
+++ b/src/public/scss/partials/_navs.scss
@@ -224,25 +224,28 @@ body
 //Side Menu Styles
 //
 
-// .side-menu {
-//   height: 100vh;
-//   a {
-//     margin-left: rem-calc(6);
-//   }
+.side-menu {
+  a {
+    margin-left: rem-calc(6);
+  }
 
-//   a:before {
-//     @extend %h2;
-//     padding: rem-calc(6);
-//     margin-right: rem-calc(24);
-//   }
-//   a > img {
-//     padding: rem-calc(6);
-//     margin-right: rem-calc(16);
-//     opacity: .8;
-//   }
+  a:before {
+    @extend %h2;
+    padding: rem-calc(6);
+    margin-right: rem-calc(24);
+  }
+  a > img {
+    padding: rem-calc(6);
+    margin-right: rem-calc(16);
+    opacity: .8;
+  }
 
-//   background-color: $off-canvas-bg;
-// }
+  background-color: $off-canvas-bg;
+
+  @media #{$large-up} {
+    height: 100vh;
+  }
+}
 
 
 //
